kubernetes/platform/infra/gateway/overlays/workload-prd/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  addresses:
    - type: IPAddress
      value: "10.0.4.50"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-longhorn
      port: 443
      protocol: HTTPS
      hostname: "longhorn.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: longhorn-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "longhorn-system"
    - name: https-kyverno-reporter
      port: 443
      protocol: HTTPS
      hostname: "kyverno-reporter.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: kyverno-reporter-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "kyverno-reporter"
    - name: https-hubble
      port: 443
      protocol: HTTPS
      hostname: "hubble.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "kube-system"
    - name: ssh-forgejo
      port: 22
      protocol: TCP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "forgejo"
    - name: https-forgejo
      port: 443
      protocol: HTTPS
      hostname: "git.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: forgejo-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "forgejo"
    - name: https-homepage
      port: 443
      protocol: HTTPS
      hostname: "homepage.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: homepage-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "homepage"
    - name: https-fluxcd
      port: 443
      protocol: HTTPS
      hostname: "fluxcd.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: fluxcd-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "flux-system"
    - name: https-goldilocks
      port: 443
      protocol: HTTPS
      hostname: "goldilocks.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: goldilocks-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "vpa"
    - name: https-httpbin
      port: 443
      protocol: HTTPS
      hostname: "httpbin.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: httpbin-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "httpbin"
    - name: https-whoami
      port: 443
      protocol: HTTPS
      hostname: "whoami.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: whoami-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "whoami"
    - name: https-uptime-kuma
      port: 443
      protocol: HTTPS
      hostname: "uptime.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: uptime-kuma-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "uptime-kuma"
    - name: https-alloy
      port: 443
      protocol: HTTPS
      hostname: "alloy.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: alloy-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "k8s-monitoring"
    - name: https-grafana
      port: 443
      protocol: HTTPS
      hostname: "grafana.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "grafana"
    - name: https-alertmanager
      port: 443
      protocol: HTTPS
      hostname: "alertmanager.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: alertmanager-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "alertmanager"
    - name: https-open-webui
      port: 443
      protocol: HTTPS
      hostname: "chat.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: open-webui-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "open-webui"
    - name: https-llama-cpp
      port: 443
      protocol: HTTPS
      hostname: "llama.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: llama-cpp-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "llm"
    - name: https-llama-cpp-cuda
      port: 443
      protocol: HTTPS
      hostname: "cuda.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: llama-cpp-cuda-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "llm"
    - name: https-llama-cpp-rocm
      port: 443
      protocol: HTTPS
      hostname: "rocm.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: llama-cpp-rocm-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "llm"
    - name: https-strata
      port: 443
      protocol: HTTPS
      hostname: "strata.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: strata-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "llm"
    - name: https-sd
      port: 443
      protocol: HTTPS
      hostname: "sd.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: sd-server-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "llm"
    - name: https-vulkan-igpu
      port: 443
      protocol: HTTPS
      hostname: "vulkan-igpu.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: vulkan-igpu-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "llm"
    - name: https-yk-portfolio
      port: 443
      protocol: HTTPS
      hostname: "portfolio.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: yk-portfolio-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "yk-portfolio"
    - name: https-yk-updates
      port: 443
      protocol: HTTPS
      hostname: "yk-updates.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: yk-update-checker-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "yk-update-checker"
    - name: https-immich
      port: 443
      protocol: HTTPS
      hostname: "immich.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: immich-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "immich"
    - name: https-opencloud
      port: 443
      protocol: HTTPS
      hostname: "opencloud.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: opencloud-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "opencloud"
    - name: https-talos-monitoring
      port: 443
      protocol: HTTPS
      hostname: "talos-monitoring.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: talos-monitoring-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "talos-monitoring"
